--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,11 @@ addons:
     - libcurl4-openssl-dev
 
 cache: bundler 
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  local_dir: _site
+  on:
+    branch: master
